--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 :root{
-    --green: #99bbad;
-    --yellow: #ebd8b7;
-    --darkyellow: #c6a9a3;
     --purple: #A100FF;
+    --darkgray: #3e3e3e;
 }
 ::selection{
     background-color: var(--purple);
@@ -32,9 +30,10 @@ body{
     flex-direction: column;
 }
 .input-group input{
-    min-width: 300px;
+    min-width: 250px;
     height: 35px;
     margin: 10px;
+    padding-left: 25px;
     background-color: white;
     border:2px solid var(--purple);
     border-radius: 20px;
@@ -61,4 +60,20 @@ body{
     border: 3px solid var(--purple);
     background-color: white;
     color: var(--purple);
+}
+#result{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/* Footer */
+
+#footer-container{
+    background: var(--darkgray);
+    color: white;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: fixed;
+    bottom:0;
 }
