--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ body{
     color: white;
     border-radius: 20px;
     border: none;
+    cursor: pointer;
 }
 #calculate-button:hover{
     border: 3px solid var(--purple);
